force-app/main/default/objects/Exception_Log__e/fields/Exception_Name__c.field-meta.xml
<CustomField>
    <fullName>Exception_Name__c</fullName>
    <label>Exception Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>