force-app/main/default/objects/Exception_Log__e/fields/Limit_Name__c.field-meta.xml
<CustomField>
    <fullName>Limit_Name__c</fullName>
    <label>Limit Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>