force-app/main/default/objects/Exception_Log__e/fields/Run_By_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_By_User_Id__c</fullName>
    <label>Run By User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>