force-app/main/default/objects/Exception_Log__e/fields/Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Stacktrace__c</fullName>
    <label>Stacktrace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>