force-app/main/default/objects/Exception_Log__e/fields/Triggered_On__c.field-meta.xml
<CustomField>
    <fullName>Triggered_On__c</fullName>
    <label>Triggered On</label>
    <length>200</length>
    <type>Text</type>
</CustomField>